# DayAgent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
Plans/: Weather_mcp_schematics.drawio  schematics-whole.drawio
app/: bot.py  classStructs.py  results.json
app/templates/: email-template.md  prompts.py
app/user_conf/: config.json
config.example/: google_keys.json  mcp_config.json
result/: generatedMD.md  results.json
