[project]
name = "dayagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.6",
    "mcp-weather-server>=0.1.3",
    "nodejs>=0.1.1",
    "python-dateutil>=2.9.0.post0",
]
